--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,6 +28,16 @@
         .button-section {
             margin-bottom: 30px;
         }
+        .report-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -46,6 +56,8 @@
             </div>
         </div>
     </div>
+
+    <button class="report-button" onclick="window.location.href='/top_spender_report.html'">View Top Spender Report</button>
 
     <script>
         function populateDatabase() {
