Add button to view Top Spender Report in the UI

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,6 +64,8 @@
         </div>
     </div>
 
+    <button class="report-button" onclick="window.location.href='/top_spender_report.html'">View Top Spender Report</button>
+
     <script>
         function populateDatabase() {
             fetch('/populate-database', { method: 'POST' })
